--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,39 @@
-title: Tri Nguyen
-email: me@trinnguyen.com
-description: Personal notes on cross-platform mobile development with Xamarin
-twitter_username: trinnguyen
-github_username: trinnguyen
+title: Tri Nguyen - Xamarin cross-platform developer
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+permalink: ':title/'
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+site-twitter: #if your site has a twitter account, enter it here
+
+# Author Settings
+author: Tri Nguyen # add your name
+author-img: trinnguyen.jpg # add your photo
+about-author: I am a software engineer focusing on .Net cross-platform apps development (Xamarin).
+social-cv: https://stackoverflow.com/cv/tringuyen
+social-twitter: trinnguyen # add your Twitter handle
+# social-facebook: # add your Facebook handle
+social-github: trinnguyen # add your Github handle
+social-linkedin: trinnguyen # add your Linkedin handle
+social-email: me@trinnguyen.com # add your Email address
+
+# Disqus
+discus-identifier: trinnguyen # add your discus identifier
+
+# Tracker
+analytics: # Google Analytics
+mixpanel-code: c10d07f8f6fc650159cf4380e04aa0fe # Mixpanel
+
+# Build Settings
 markdown: kramdown
-theme: minima
 plugins:
-  - jekyll-feed
-  - jekyll-github-metadata
-  - jekyll-seo-tag
-jekyll_admin:
-  hidden_links: null
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
+
+paginate: 8
+paginate_path: "/page/:num"
+
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock", "vendor"]
