--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ author: Tri Nguyen # add your name
 author-img: trinnguyen.jpg # add your photo
 about-author: I am a software engineer focusing on .Net cross-platform apps development (Xamarin).
 social-cv: https://stackoverflow.com/cv/tringuyen
-social-twitter: trinnguyen # add your Twitter handle
+social-twitter:  # add your Twitter handle
 # social-facebook: # add your Facebook handle
 social-github: trinnguyen # add your Github handle
 social-linkedin: trinnguyen # add your Linkedin handle
-social-email: me@trinnguyen.com # add your Email address
+social-email:  # add your Email address
 
 # Disqus
 discus-identifier: trinnguyen # add your discus identifier
