--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Tri Nguyen # add your name
 author-img: trinnguyen.jpg # add your photo
-about-author: I am a software engineer focusing on .Net cross-platform apps development (Xamarin).
-social-cv: https://stackoverflow.com/cv/tringuyen
+about-author: Mobile developer specializes in Xamarin and .Net. Interested in programming languages and compilers.
+social-cv: https://stackoverflow.com/users/1690138/tri-nguyen
 social-twitter:  # add your Twitter handle
 # social-facebook: # add your Facebook handle
 social-github: trinnguyen # add your Github handle
@@ -28,6 +28,10 @@ mixpanel-code: 187cb6ebfb193858c660440e4ac58062 # Mixpanel
 
 # Build Settings
 markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 plugins:
   - jekyll-sitemap
   - jekyll-paginate
